--- a/src/com/gamestore/interfaces/ListarCliente.form
+++ b/src/com/gamestore/interfaces/ListarCliente.form
@@ -6,7 +6,7 @@
       <Color blue="ff" green="ff" red="ff" type="rgb"/>
     </Property>
     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[825, 370]"/>
+      <Dimension value="[825, 500]"/>
     </Property>
   </Properties>
   <AuxValues>
@@ -82,6 +82,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="INCLUIR NOVO CLIENTE"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoIncluirNovoActionPerformed"/>
+      </Events>
     </Component>
     <Container class="javax.swing.JPanel" name="jPanel1">
       <Properties>
