--- a/src/com/gamestore/interfaces/SelecaoInicial.form
+++ b/src/com/gamestore/interfaces/SelecaoInicial.form
@@ -42,6 +42,9 @@
   <SubComponents>
     <Container class="javax.swing.JPanel" name="buttonsPanel">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[600, 300]"/>
         </Property>
@@ -54,6 +57,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="botaoCadastroClientes">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Calibri Light" size="18" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="CLIENTES"/>
           </Properties>
           <Events>
@@ -62,18 +68,36 @@
         </Component>
         <Component class="javax.swing.JButton" name="botaoCadastroProdutos">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Calibri Light" size="18" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="PRODUTOS"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoCadastroProdutosActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botaoVendas">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Calibri Light" size="18" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="VENDAS"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoVendasActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="botaoRelatorios">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Calibri Light" size="18" style="1"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="RELAT&#xd3;RIOS"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botaoRelatoriosActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
