--- a/src/com/gamestore/interfaces/ListarProduto.form
+++ b/src/com/gamestore/interfaces/ListarProduto.form
@@ -160,6 +160,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="INSERIR NOVO PRODUTO"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
